--- a/index.html
+++ b/index.html
@@ -5,23 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trivia Questions</title>
     <style>
-        body { font-family: Arial, sans-serif; max-width: 600px; margin: auto; padding: 20px; }
+        body { 
+            font-family: Arial, sans-serif; 
+            max-width: 800px; /* Increased max-width for better layout */
+            margin: auto; 
+            padding: 20px; 
+            text-align: center; /* Center the text */
+        }
         .question-box { 
             margin-bottom: 20px; 
             padding: 20px; 
             border: 1px solid #ccc; 
             border-radius: 5px; 
-            position: relative; 
+            background-color: #f9f9f9;
         }
-        .category { font-weight: bold; color: #333; }
-        .question { margin: 10px 0; }
-        .answer { display: none; color: green; margin-top: 10px; }
+        .category { 
+            font-weight: bold; 
+            color: #333; 
+            font-size: 1.5em; /* Larger category text */
+        }
+        .question { 
+            margin: 20px 0; 
+            font-size: 1.8em; /* Larger question text */
+        }
+        .answer { 
+            display: none; 
+            color: green; 
+            margin-top: 20px; 
+            font-size: 1.8em; /* Larger answer text */
+        }
         .button-container { 
-            position: absolute; 
-            top: 20px; 
-            right: 20px; 
+            display: flex; 
+            justify-content: space-between; 
+            align-items: center;
+            margin-top: 30px; /* Added margin for spacing */
         }
-        button { margin-left: 10px; }
+        #next-question { 
+            padding: 20px 40px; 
+            font-size: 1.5em; /* Larger button text */
+            background-color: #007bff; 
+            color: white; 
+            border: none; 
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #back-question { 
+            padding: 10px 20px; 
+            font-size: 1em; 
+            background-color: #6c757d; 
+            color: white; 
+            border: none; 
+            border-radius: 5px;
+            cursor: pointer;
+            position: absolute;
+            top: 20px;
+            left: 20px;
+        }
     </style>
 </head>
 <body>
@@ -38,13 +77,13 @@
             const questionData = questions[index];
             container.innerHTML = `
                 <div class="question-box">
+                    <div class="category">${questionData.category}</div>
+                    <div class="question">${questionData.question}</div>
+                    <div class="answer">${questionData.answer}</div>
                     <div class="button-container">
                         <button id="back-question">Back</button>
                         <button id="next-question">Show Answer</button>
                     </div>
-                    <div class="category">${questionData.category}</div>
-                    <div class="question">${questionData.question}</div>
-                    <div class="answer">${questionData.answer}</div>
                 </div>
             `;
             showingAnswer = false;
@@ -73,6 +112,5 @@
         questions.sort(() => Math.random() - 0.5);
         showQuestion(currentIndex);
     </script>
-    <h2>Thanks for playing</h2>
 </body>
 </html>
