move to 80 percent viewport window

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             text-align: center; 
             display: flex; 
             flex-direction: column; 
-            height: 100vh; /* Full viewport height */
+            height: 80vh; /* Full viewport height */
             position: relative;
         }
         .question-box { 
@@ -77,7 +77,7 @@
     </style>
 </head>
 <body>
-    <h1>Trivia Questions</h1>
+    <!-- <h1>Trivia Questions</h1> -->
     <div id="question-container" class="question-box"></div>
 
     <!-- Button Container outside of the question box, fixed at the bottom -->
