--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="shape shape-1"></div>
+    <div class="shape shape-2"></div>
+    <div class="shape shape-3"></div>
+    <div class="shape shape-4"></div>
+    <div class="shape shape-5"></div>
+    <div class="shape shape-6"></div>
+    <div class="shape shape-7"></div>
+    <div class="shape shape-8"></div>
+    <div class="shape shape-9"></div>
+    <div class="shape shape-10"></div>
     <!-- <h1>Trivia Questions</h1> -->
     <div id="question-container" class="question-box">
         <div class="question"></div>
